Set up access to json file and display some info

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
       <h3>Basic poly-me Demo</h3>
       <demo-snippet>
         <template>
-          <poly-me></poly-me>
+          <poly-me src="john.json"></poly-me>
         </template>
       </demo-snippet>
     </div>
