--- a/poly-me.html
+++ b/poly-me.html
@@ -14,7 +14,8 @@ A web based resume using polymer
         display: block;
       }
     </style>
-    <h2>Hello [[prop1]]</h2>
+    <h1>{{data.name}}</h1>
+    <h2>{{data.position}}</h2>
   </template>
 
   <script>
@@ -23,11 +24,20 @@ A web based resume using polymer
       is: 'poly-me',
 
       properties: {
-        prop1: {
-          type: String,
-          value: 'poly-me',
+        src: {
+          type: String
         },
+        data: Object
       },
+
+      attached: function(){
+        var self = this;
+        this.data = fetch(this.src).then(function(res){
+          return res.json();
+        }).then(function(json){
+          self.data = json;
+        });
+      }
 
     });
   </script>
