--- a/poly-me.html
+++ b/poly-me.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../iron-pages/iron-pages.html">
 <link rel="import" href="../paper-tabs/paper-tabs.html">
+<link rel="import" href="../paper-card/paper-card.html">
 
 <link rel="import" href="poly-me-section.html">
 
@@ -25,41 +26,105 @@ Example:
     <style include="iron-flex iron-flex-alignment">
       :host {
         display: block;
+        margin: 0;
+        font-family: 'Roboto', 'Noto', sans-serif;
+        line-height: 1.5;
+      }
+
+      .center-div {
+        padding: 30px;
+      }
+
+      .profile {
+        display: block;
+        min-width: 200px;
+        max-width: 250px;
+        text-align: center;
+        margin: 0 auto;
+        padding: 20px;
+      }
+
+      .profile .name {
+        font-size: 22px;
+        padding: 8px 0;
+      }
+
+      .profile .position, .profile .location {
+        font-size: 12px;
+      }
+
+      .profile-image {
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+      }
+
+      .social-profiles a{
+        text-decoration: none;
+        color: black;
+        margin: 10px;
+      }
+
+      paper-tabs {
+        margin: 0px auto;
+        max-width: 500px;
+      }
+
+      .tabs-div, .center-div {
+        background-color: var(--primary-color, darkblue);
+      }
+
+      .center-div {
+        background-size: cover;
+        background-image: var(--bg-image);
       }
     </style>
 
-    <div>
+    <div class="center-div">
       <!--Center content-->
-      <div class="name">{{data.name}}</div>
-      <div class="position">{{data.position}}</div>
-
-      <hr>
-      <div class="social">
-        <div class="social-title">
-          {{data.social.title}}
+      <paper-card class="profile">
+        <div>
+          <img src$="{{data.profileImage}}" alt$="{{data.name}}" class="profile-image">
         </div>
-        <div class="social-profiles">
-          <template is="dom-repeat" items="{{data.social.profiles}}">
-            <a href$="{{item.link}}" target="_blank">
-              <i class$="fa fa-{{item.network}}"></i>
-            </a>
-          </template>
+        <div class="name">
+          {{data.name}}
         </div>
-      </div>
+        <div class="position">
+          {{data.position}}
+        </div>
+        <div class="location">
+            <i class="fa fa-map-marker"></i> {{data.location}}
+          </div>
+        <hr>
+        <div class="social">
+          <div class="social-title">
+            {{data.social.title}}
+          </div>
+          <div class="social-profiles">
+            <template is="dom-repeat" items="{{data.social.profiles}}">
+              <a href$="{{item.link}}" target="_blank">
+                <i class$="fa fa-{{item.network}}"></i>
+              </a>
+            </template>
+          </div>
+        </div>
+      </paper-card>
+    </div>
 
+    <div class="tabs-div">
       <paper-tabs selected="{{selected}}">
         <template is="dom-repeat" items="{{data.sections}}">
           <paper-tab>{{item.title}}</paper-tab>
         </template>
       </paper-tabs>
+    </div>
 
+    <div>
       <iron-pages selected="{{selected}}">
         <template is="dom-repeat" items="{{data.sections}}" as="section">
           <poly-me-section data="{{section}}"></poly-me-section>
         </template>
       </iron-pages>
-        
-      </div>
 
     </div>
 
@@ -80,11 +145,17 @@ Example:
       },
 
       attached: function(){
+        this.selected = 0;
         var self = this;
         this.data = fetch(this.src).then(function(res){
           return res.json();
         }).then(function(json){
           self.data = json.content;
+
+          self.customStyle['--primary-color'] = json.settings.primaryColor == null ? 'blue' : json.settings.primaryColor;
+          self.customStyle['--bg-image'] = "url('"+json.content.backgroundImage + "')";
+          self.updateStyles();
+
         });
       }
 
