--- a/poly-me.html
+++ b/poly-me.html
@@ -1,12 +1,12 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../iron-pages/iron-pages.html">
-<link rel="import" href="../paper-tabs/paper-tabs.html">
-<link rel="import" href="../paper-card/paper-card.html">
+<link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="bower_components/paper-card/paper-card.html">
 
 <link rel="import" href="poly-me-section.html">
 
-<link rel="stylesheet" href="../components-font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
 
 
 <!--
