--- a/poly-me.html
+++ b/poly-me.html
@@ -6,7 +6,7 @@
 
 <link rel="import" href="poly-me-section.html">
 
-<link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="/../../bower_components/components-font-awesome/css/font-awesome.min.css">
 
 
 <!--
