--- a/poly-me-section.html
+++ b/poly-me-section.html
@@ -27,6 +27,10 @@ Example:
         line-height: 1.5;
       }
 
+      h1, h2, h3, h4, h5, h6 {
+        font-family: 'Roboto Slab';
+      }
+
       .sub {
         min-width: 250px;
         max-width: 300px;
