--- a/poly-me.html
+++ b/poly-me.html
@@ -1,12 +1,10 @@
-<link rel="import" href="/../../bower_components/polymer/polymer.html">
-<link rel="import" href="/../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="/../../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="/../../bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="/../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../iron-pages/iron-pages.html">
+<link rel="import" href="../paper-tabs/paper-tabs.html">
+<link rel="import" href="../paper-card/paper-card.html">
 
 <link rel="import" href="poly-me-section.html">
-
-<link rel="stylesheet" href="/../../bower_components/components-font-awesome/css/font-awesome.min.css">
 
 
 <!--
@@ -81,6 +79,8 @@ Available section types are:
 -->
 
 <dom-module id="poly-me">
+  <!--<link rel="import" type="css" href="../components-font-awesome/css/font-awesome.min.css">-->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   <template>
     <style include="iron-flex iron-flex-alignment">
       :host {
