Add link to roboto fonts

--- a/poly-me.html
+++ b/poly-me.html
@@ -81,6 +81,7 @@ Available section types are:
 <dom-module id="poly-me">
   <!--<link rel="import" type="css" href="../components-font-awesome/css/font-awesome.min.css">-->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
   <template>
     <style include="iron-flex iron-flex-alignment">
       :host {
