Fix image width

--- a/poly-me-section.html
+++ b/poly-me-section.html
@@ -50,6 +50,7 @@ Example:
         margin: 0 auto;
         display: block;
         fill: var(--primary-color);
+        max-width: 100%;
       }
 
       paper-card {
