Update readme and documentation

--- a/poly-me-render.html
+++ b/poly-me-render.html
@@ -47,6 +47,9 @@ The object structure should be as follows:
   
 }
 ```
+
+Section types are available as separate components with their own documentation.
+Please see each section's documentation for more information.
 -->
 
 <dom-module id="poly-me-render">
