--- a/poly-me.html
+++ b/poly-me.html
@@ -45,6 +45,9 @@ The `.json` file structure should be as follows:
 }
 ```
 
+Section types are available as separate components with their own documentation.
+Please see each section's documentation for more information.
+
 @demo demo/index.html 
 -->
 
