Add demos and fix layout bugs

--- a/sections/cards-section.html
+++ b/sections/cards-section.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../paper-button/paper-button.html">
+<link rel="import" href="../../paper-card/paper-card.html">
 
 
 <!--
@@ -36,8 +38,7 @@ Usage Example:
   <cards-section data="[[data]]"></cards-section>
 ```
 
-
-
+@demo demo/cards.html 
 -->
 
 <dom-module id="cards-section">
