--- a/sections/content-section.html
+++ b/sections/content-section.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 
 
 <!--
@@ -33,8 +34,7 @@ Usage Example:
   <content-section data="[[data]]"></content-section>
 ```
 
-
-
+@demo demo/content.html 
 -->
 
 <dom-module id="content-section">
