--- a/sections/contact-section.html
+++ b/sections/contact-section.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../paper-input/paper-input.html">
 <link rel="import" href="../../paper-input/paper-textarea.html">
 <link rel="import" href="../../paper-button/paper-button.html">
@@ -25,6 +26,7 @@ Usage Example:
   <contact-section data="[[data]]"></contact-section>
 ```
 
+@demo demo/contact.html 
 -->
 
 <dom-module id="contact-section">
