--- a/sections/dated-section.html
+++ b/sections/dated-section.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../../polymer/polymer.html">
-
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../paper-button/paper-button.html">
+<link rel="import" href="../../paper-card/paper-card.html">
 
 <!--
 `dated-section`
@@ -37,8 +39,7 @@ Usage Example:
   <dated-section data="[[data]]"></dated-section>
 ```
 
-
-
+@demo demo/dated.html 
 -->
 
 <dom-module id="dated-section">
