add render demo

--- a/poly-me-render.html
+++ b/poly-me-render.html
@@ -50,6 +50,8 @@ The object structure should be as follows:
 
 Section types are available as separate components with their own documentation.
 Please see each section's documentation for more information.
+
+@demo demo/render.html 
 -->
 
 <dom-module id="poly-me-render">
