Update bower version, json-box version & docs code highlighting

--- a/sections/cards-section.html
+++ b/sections/cards-section.html
@@ -11,7 +11,7 @@ A section of poly-me that displays some cards.
 
 Section data should be structured as follows:
 
-```
+```json
 {
   "title": "Name to appear in tab",
   "type": "cards",
@@ -34,7 +34,7 @@ Section data should be structured as follows:
 ```
 
 Usage Example:
-```
+```html
   <cards-section data="[[data]]"></cards-section>
 ```
 
