--- a/sections/contact-section.html
+++ b/sections/contact-section.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../paper-input/paper-textarea.html">
 <link rel="import" href="../../paper-button/paper-button.html">
 
-<!--
+<!--json
 `contact-section`
 
 A section of poly-me that displays a contact form and submits it using [formspree.io](https://formspree.io) .
@@ -22,7 +22,7 @@ Section data should be structured as follows:
 ```
 
 Usage Example:
-```
+```html
   <contact-section data="[[data]]"></contact-section>
 ```
 
