--- a/sections/content-section.html
+++ b/sections/content-section.html
@@ -9,7 +9,7 @@ A section of poly-me that displays basic content.
 
 Section data should be structured as follows:
 
-```
+```json
 {
   "title": "Name to appear in tab",
   "type": "content",
@@ -30,7 +30,7 @@ Section data should be structured as follows:
 ```
 
 Usage Example:
-```
+```html
   <content-section data="[[data]]"></content-section>
 ```
 
