--- a/sections/dated-section.html
+++ b/sections/dated-section.html
@@ -10,7 +10,7 @@ A section of poly-me that displays cards with dated information.
 
 Section data should be structured as follows:
 
-```
+```json
 {
   "title": "Name to appear in tab",
   "type": "dated",
@@ -35,7 +35,7 @@ Section data should be structured as follows:
 ```
 
 Usage Example:
-```
+```html
   <dated-section data="[[data]]"></dated-section>
 ```
 
